# Oberon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
docs/: ARCHITECTURE.md  ROADMAP.md  SECURITY.md
examples/: dry_run_example.md
src/: context.rs  lib.rs  main.rs
src/agent/: core.rs  mod.rs  react.rs  reflection.rs
src/cli/: interface.rs  mod.rs  output.rs
src/core/: config.rs  error.rs  logging.rs  mod.rs
src/executor/: engine.rs  mod.rs  schema.rs
src/git/: commit.rs  diff.rs  intelligence.rs  mod.rs
src/llm/: mod.rs  ollama.rs  prompt.rs  provider.rs
src/memory/: long_term.rs  mod.rs  short_term.rs
src/planner/: mod.rs  plan.rs
src/safety/: mod.rs  policy.rs  sandbox.rs
src/tools/: base.rs  file_read.rs  file_write.rs  git_commit.rs  git_diff.rs  list_dir.rs  mod.rs  refactor.rs  registry.rs  search_code.rs
tests/: integration_test.rs  tool_tests.rs
