[package]
name = "oberon"
version = "0.2.0"
edition = "2021"
description = "Local-first AI Agent Runtime for Developers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oberon-ai/oberon"
readme = "README.md"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
walkdir = "2.4"
git2 = "0.18"
tempfile = "3.8"
toml = "0.8"
dirs = "5.0"
colored = "2.1"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
async-stream = "0.3"
parking_lot = "0.12"
once_cell = "1.19"
dashmap = "5.5"
arc-swap = "1.6"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"

[[bin]]
name = "oberon"
path = "src/main.rs"